--- a/src/index.css
+++ b/src/index.css
@@ -1,43 +1,1 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  padding: 40px;
-  background-color: #f4f4f8;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
-}
-
-h2 {
-  color: #2ab7ca;
-  text-align: center;
-  font-size: 24px;
-}
-
-.card-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-
-  max-width: 1024px;
-  margin: 0 auto;
-}
-
-.card {
-  border: 1px solid #9dadcb;
-  padding: 20px;
-  margin: 10px;
-  background-color: #31363f;
-  border-radius: 10px;
-}
-
-button {
-  border: none;
-  font-size: 20px;
-  background-color: #31363f;
-  width: 100%;
-  text-align: right;
-  cursor: pointer;
-}
+@import "tailwindcss"
